fix: styling typo

--- a/src/app/views/signup/signup.component.html
+++ b/src/app/views/signup/signup.component.html
@@ -76,7 +76,7 @@
         >{{ isLoading ? "Loading..." : "Continue" }}</app-button
       >
       <a
-        routerLink="/login"
+        href="#"
         class="text-center text-primary block mt-3 hover:underline text-sm"
         >Already have an account? Log in here</a
       >
