--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
         <p class="w-1/2 mb-12 leading-relaxed text-lg">
           Here's the details you've signed up with:
         </p>
-        <div class="rounded-2xl p-4 sm:p-12 w-1/2 border">
+        <div class="rounded-2xl px-4 sm:px-12 w-1/2 border">
           <dl class="divide-y divide-gray-100">
             <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
               <dt class="text-sm font-medium leading-6 text-gray-900">
