--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
         <h1 class="text-4xl font-bold mb-4 text-primary">
           Welcome {{ (user$ | async)?.firstName }}!
         </h1>
-        <p class="w-1/2 mb-12 leading-relaxed text-lg">
+        <p class="sm:w-1/2 mb-12 leading-relaxed text-lg">
           Here's the details you've signed up with:
         </p>
         <div class="rounded-2xl px-4 sm:px-12 w-1/2 border">
@@ -43,7 +43,7 @@
             </div>
           </dl>
         </div>
-        <div class="w-1/2 mt-12 leading-relaxed text-lg">
+        <div class="sm:w-1/2 mt-12 leading-relaxed text-lg">
           Thank you for checking out this demo! This is all for now, and I hope
           you like what you've seen so far. 🙂 Make sure to check out the
           README.md, where I explain what I've built and how I've built it.
